fix: tweak nowrap class for breakpoints

--- a/sass/themes/cr/2019/components/typography/_typography.scss
+++ b/sass/themes/cr/2019/components/typography/_typography.scss
@@ -154,8 +154,16 @@ label {
   color: $colour-blue !important;
 }
 
-.no-wrap {
-  white-space: nowrap;
+.no-wrap--md-lg {
+  @include breakpoint($screen-md) {
+    white-space: nowrap;
+  }
+}
+
+.no-wrap--lg {
+  @include breakpoint($screen-lg) {
+    white-space: nowrap;
+  }
 }
 
 br.break--md-lg {
